@startuml

/' Skin from SQL Plantuml blog[1]
 '[1]: https://raphael-leger.medium.com/automatically-generating-up-to-date-database-diagrams-with-typeorm-d1279a20545e
'/

left to right direction
skinparam roundcorner 10
/'
 ' skinparam linetype ortho
 '/
skinparam shadowing false
skinparam handwritten false

skinparam class {
    BackgroundColor white
    ArrowColor #2688d4
    BorderColor #2688d4
}

!define table(x) class x << (T, white) SQL Table >>

table( score_index ) {
       scoreidx: int
       score: text
}
table( word_index ) {
       wordidx: int
       word: text
}
note bottom of word_index
Superset of all valid wordle words = accepted guesses
end note

note bottom of answers_index
Wordle answers = subset of accepted guesses, referencing word_index
end note

table( answers_index ) {
        wordidx: int
}

answers_index::wordidx --> word_index::wordidx : FK

note bottom of scores
Computed score of a guess (word) against an answer (word) all via index
end note
table( scores ) {
       guessidx: int
       answeridx: int
       scoreidx: int
}
scores::guessidx --> word_index::wordidx : FK
scores::answeridx --> word_index::wordidx : FK
scores::scoreidx --> score_index::scoreidx : FK

@enduml
